--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -5,7 +5,13 @@ ffi = true
 fs_permissions = [{access = "read-write", path = ".forge-snapshots/"}]
 libs = ["lib"]
 out = "out"
-solc_version = "0.8.30"
+solc_version = "0.8.26"
+remappings = [
+    "reactive-lib/=lib/system-smart-contracts/lib/reactive-lib/src/",
+    "system-smart-contracts/=lib/system-smart-contracts/src/",
+    "v4-core/=lib/uniswap-hooks/lib/v4-core/",
+    "v4-periphery/=lib/uniswap-hooks/lib/v4-periphery/"
+]
 src = "src"
 via_ir = false
 
