--- a/contracts/.gitignore
+++ b/contracts/.gitignore
@@ -3,10 +3,7 @@ cache/
 out/
 
 # Ignores development (and goerli) broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/*/5/
-/broadcast/**/dry-run/
+broadcast/
 
 # Docs
 docs/
